--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/x-icon" href="./static/logo.png" />
+  <link rel="icon" type="image/x-icon" href="<%= staticUrl %>/logo.png" />
   <script>
     var coverSupport = 'CSS' in window && typeof CSS.supports === 'function' && (CSS.supports('top: env(a)') ||
       CSS.supports('top: constant(a)'))
